--- a/Esra.Web/Views/SalaryScale/Details.cshtml
+++ b/Esra.Web/Views/SalaryScale/Details.cshtml
@@ -16,7 +16,9 @@
             {
             <fieldset>
                 <h3>
-                    No Salary Data Available</h3>
+                    <br />
+                    &nbsp; &nbsp;No Salary Data Available</h3>
+                <br />
             </fieldset>
             }
         }
