--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -6,27 +6,34 @@
     <meta name="author" content="" />
     <link rel="shortcut icon" href="@Url.Content("~/favicon.ico")" />
     <link href="@Url.Css("main.css")" rel="stylesheet" type="text/css" />
-    <link href="@Url.Css("jquery-ui-1.8.11.custom.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Css("extended.css")" rel="stylesheet" type="text/css" />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js" type="text/javascript"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js" type="text/javascript"></script>
+    @* <link href="@Url.Css("jquery-ui-1.8.11.custom.css")" rel="stylesheet" type="text/css" />*@
+    <link href="@Url.Css("jquery-ui-1.8.16.custom.css")" rel="stylesheet" type="text/css" />
+    @*<link href="@Url.Content("~/content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />*@
+    <link href="@Url.Css("ui.multiselect.css")" rel="stylesheet" type="text/css" />
+    @*<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js" type="text/javascript"></script>*@
+    <script src="@Url.Script("jquery-1.6.2.min.js")" type="text/javascript"></script>
+    @*<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js" type="text/javascript"></script>*@
+    <script src="@Url.Script("jquery-ui-1.8.16.custom.min.js")" type="text/javascript"></script>
     <script src="@Url.Script("DataTables-1.8.1/media/js/jquery.dataTables.min.js")" type="text/javascript"></script>
-    <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"
-        type="text/javascript"></script>
+    @* <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"
+        type="text/javascript"></script>*@
+    <script src="@Url.Script("jquery.validate.min.js")" type="text/javascript"></script>
     <script src="@Url.Script("jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     <script src="@Url.Script("jquery.formatCurrency-1.4.0.min.js")" type="text/javascript"></script>
     <script src="@Url.Script("jshashtable.js")" type="text/javascript"></script>
     <script src="@Url.Script("jquery.numberformatter-1.2.2.min.js")" type="text/javascript"></script>
-    <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"
-        type="text/javascript"></script>
-    @*<script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js" type="text/javascript"></script>*@
-    <script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"
-        type="text/javascript"></script>
+    @* <script src="//ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js"
+        type="text/javascript"></script>*@ @*<script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js" type="text/javascript"></script>*@
+    @*<script src="//ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"
+        type="text/javascript"></script>*@
+    <script src="@Url.Script("jquery.tmpl.min.js")" type="text/javascript"></script>
     <script src="@Url.Script("jquery-dateFormat.js")" type="text/javascript"></script>
     <script src="@Url.Script("jquery.ui.combobox.js")" type="text/javascript"></script>
     <script src="@Url.Script("jquery.fn.sortElements.js")" type="text/javascript"></script>
-    <link href="@Url.Css("ui.multiselect.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Script("jquery.ui.autocomplete.js")" type="text/javascript"></script>
     <script src="@Url.Script("ui.multiselect.js")" type="text/javascript"></script>
+    <script src="@Url.Script("themeswitchertool.js")" type="text/javascript"></script>
     @if (false)
     { //Load the jquery docs for intellisense
         <script src="../../Scripts/jquery-1.6-vsdoc.js" type="text/javascript"></script>
@@ -34,12 +41,19 @@
     @MvcMiniProfiler.MiniProfiler.RenderIncludes()
     @RenderSection("AdditionalScripts", false)
     <style type="text/css">
-        /* TODO shouldn't be necessary */.ui-button-icon-only .ui-button-text
+        /* TODO shouldn't be necessary */
+        .ui-button-icon-only .ui-button-text .ui-button
+        {
+            margin-left: -1px;
+        }
+        .ui-button-icon-only .ui-button-text
         {
             padding: 0.35em;
         }
+
         .ui-autocomplete-input
         {
+            margin: 0;
             padding: 0.48em 0 0.47em 0.45em;
             width: 30em;
         }
@@ -166,6 +180,8 @@
             }
             <div class="col2" id="LogOffOn">
                 @Html.ActionLink("Logoff", "LogOut", "Account")
+                <div id="switcher">
+                </div>
             </div>
         </div>
         <div class="main">
@@ -226,6 +242,8 @@
 	</script>*@
     <script language="JavaScript" type="text/javascript">
         $(document).ready(function () {
+            $('#switcher').themeswitcher();
+
             $('.datatable').dataTable({
                 "bProcessing": true,
                 //"bServerSide": true,
