--- a/Esra.Web/Views/Shared/_SalaryScale.cshtml
+++ b/Esra.Web/Views/Shared/_SalaryScale.cshtml
@@ -3,7 +3,7 @@
     if (Model.SalaryScale != null && Model.SalaryScale.TitleCode != null)
     {
     <fieldset class="display-form">
-        <legend>Campus-wide Salary Scale</legend>
+        <legend style="font-weight: bold; font-size: large;">Campus-wide Salary Scale</legend>
         <ul>
             <li>
                 <div class="display-label">
