--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisEditor.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisEditor.cshtml
@@ -14,7 +14,7 @@
 
         <center>
             <br />
-            <a id="cancelBack" class="buttons">
+            <a href="#" id="cancelBack" class="buttons">
                 <img alt="Back" src='@Url.Image("arrow_left.jpg")' class="back_button" />&nbsp;Cancel/Back</a>
             &nbsp; &nbsp;<input type="submit" name="btnSubmitSalaryReviewAnalysis" value="Save Salary Review Analysis"
                 id="btnSubmitSalaryReviewAnalysis" />
