Converted project to use VS 2012, plus changed CAS to use standard port.  Also "fixed" nHibernate error if object was not found.

--- a/Esra.Web/Views/Shared/_SalaryScale.cshtml
+++ b/Esra.Web/Views/Shared/_SalaryScale.cshtml
@@ -1,4 +1,5 @@
-﻿@model Esra.Web.Models.SalaryScaleViewModel
+﻿@using FluentNHibernate.Conventions
+@model Esra.Web.Models.SalaryScaleViewModel
 @{
     if (Model.SalaryScale != null && Model.SalaryScale.TitleCode != null)
     {
