removing inline styles

--- a/Esra.Web/Views/SalaryScale/Index.cshtml
+++ b/Esra.Web/Views/SalaryScale/Index.cshtml
@@ -8,8 +8,8 @@
     ViewBag.Title = "Salary Scale Selection";
 }
 
-<div id="headertext" style="font-size: 12px; font-weight: bold; font-style: italic; ">
-	<p style="margin: 10px 0 20px;">
+<div id="headertext">
+	<p>
 		Note: Official UCOP Non-Academic Salary Scales may be found here: <a href=@(System.Configuration.ConfigurationManager.AppSettings["UCOPNonAcademicTitlesUrl"])>UCOP Non-Academic Titles</a>
 	</p>
 </div>
