internal css test

--- a/Esra.Web/Views/Shared/_Layout.cshtml
+++ b/Esra.Web/Views/Shared/_Layout.cshtml
@@ -137,6 +137,12 @@
             cursor: pointer;
             margin-bottom: -2px;
         }
+	#headertext p {
+	  font-size:14px;
+	  font-weight: bold;
+	  font-style: italic;
+	  margin:0px 0px 0px 0px
+	}
     </style>
 </head>
 <body>
